# golden-path-ecs-template

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json
.ai/: README.md  project-guidance.md  sync.sh
.ai/agents/: performance-scalability.md  readability-maintainability.md  security-practices.md  system-design-scalability.md
.ai/meta/: fastify.yaml  frontend-observability.yaml  frontend-ui-engineering.yaml  nestjs.yaml  principal-engineer-planner.yaml  programming-kb.yaml  react-typescript-frontend.yaml  (+4 more)
.gemini/: GEMINI.md
docs/: ai-review-workflow.md  architecture-decisions.md  architecture.md  golden-path.md  implementation-plan.md  index.md  my-learning-notes.md  platform-api.md  runbook.md  ts-cdk-learning-path.md
ecs-infra/: package.json
infra/: package.json
movie-reservation-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
movie-reservation-mcp/scripts/: smoke_call_tool.py
movie-reservation-mcp/src/movie_reservation_mcp/: __init__.py  __main__.py  config.py  graphql_client.py  logging.py  server.py  telemetry.py
movie-reservation-mcp/tests/: test_graphql_client.py  test_server.py
movie-reservation-service/: .oxlintrc.json  DEVELOPMENT.md  Dockerfile  eslint.config.mjs  package.json  schema.gql  tsconfig.json
movie-reservation-web/: README.md  index.html  package.json  vite.config.ts
observability/: local-collector.env  otel-collector.yaml
service/: .prettierignore  DEVELOPMENT.md  eslint.config.mjs  package.json  schema.gql  tsconfig.json  vitest.config.ts
(+360 files in other folders)
